syntax = "proto3";

package blog;

option go_package = "./proto";

import "google/protobuf/timestamp.proto";

message Blog {
    string id = 1;
    string title = 2;
    string content = 3;
    string author_id = 4;
    int64 upvote = 5;
    google.protobuf.Timestamp created_at = 6;
    optional google.protobuf.Timestamp deleted_at = 7;
}

message CreateBlogReq{
    Blog blog = 1;
}

message ReadBlogReq{
    string id = 1;
}

message UpdateBlogReq{
    Blog blog = 1;
}

message DeleteBlogReq{
    string id = 1;
}

message DeleteBloqRes{
    string success = 1;
}

message ListBlogReq{}

message BlogRes{
    Blog blog = 1; 
}

service BlogService{
    rpc CreateBlog(CreateBlogReq) returns (BlogRes);
    rpc ReadBlog(ReadBlogReq) returns (BlogRes);
    rpc UpdateBlog(UpdateBlogReq) returns (BlogRes);
    rpc DeleteBlog(DeleteBlogReq) returns (DeleteBloqRes);
    rpc ListBlogs(ListBlogReq) returns (stream BlogRes);
}